[package]
name = "relay-datagen-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.5" }
relay-substrate-client = { path = "../client-substrate" }
relay-utils = { path = "../utils" }

# Supported Chains
bp-datagen = { path = "../../primitives/chain-datagen" }
datagen-runtime  = { path = "../../../Datagen-Substrate-Grant/fast_blockchain/runtime", default-features = false }
# datagen-runtime = { git = "https://github.com/ysfkel/Datagen-Substrate-Grant.git", default-features = false, branch = "main" }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = [
	"bp-datagen/std",
    "datagen-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-transaction-payment/std",
    "sp-runtime/std"

]
